--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Rock Paper Scissors Game</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <h1>Rock Paper Scissors Game</h1>
-        </header>
-        <div class="score-board">
-            <div id="user-label" class="badge">user</div>
-            <div id="computer-label" class="badge">computer</div>
-            <span id="user-score">0</span>:<span id="computer-score">0</span>
-        </div>
-        <div class="result">
-            <p id="you">YOUR CHOICE : PAPER </p>
-            <p id="computer">COMPUTER CHOICE : ROCK </p>
-            <p>PAPER COVERS ROCK YOU WIN!!</p>
-        </div>
-        <div class="choices">
-            <div class="choice" id="p">
-                <img src="/images/paper.png">
-            </div>
-            <div class="choice" id="r">
-                <img src="/images/Rock.png">
-            </div>
-            <div class="choice" id="s">
-                <img src="/images/Scissor.png">
-            </div>
-        </div>
-        <p id="action-message">MAKE YOUR MOVE</p>
-        
-    </body>
-    <script src="app.js" charset="utf-8"></script>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Rock Paper Scissors Game</title>
+    <link rel="stylesheet" href="styles/styles.css">
+  </head>
+  <body>
+    <header>
+      <h1><span id="rock">Rock. </span><span id="paper">Paper. </span><span id="scissors">Scissors.</span></h1>
+    </header>
+    <div id="board-label">Score</div>
+    <div class="score-board">
+      <div id="user-label" class="badge">You</div>
+      <div id="cpu-label" class="badge">CPU</div>
+      <span id="user-score">0</span>:<span id="cpu-score">0</span>
+    </div>
+        <p id="action-message">Make your move.</p>
+    <div class="choices">
+      <div class="choice" id="r">
+        <img src="images/rock.png" alt="Rock" height="100%" width="100%">
+      </div>
+      <div class="choice" id="p">
+        <img src="images/paper.png" alt="Paper" height="100%" width="100%">
+      </div>
+      <div class="choice" id="s">
+        <img src="images/scissors.png" alt="Scissors" height="100%" width="100%">
+      </div>
+    </div><br>
+    <div class="result">
+      <p></p>
+    </div>
+<br><br>
+    <!-- <a href="https://emojipedia.org">*here's the images used for the hands ></a> -->
+    <!-- <a href="https://www.youtube.com/watch?v=JOpedahoKoc">Paper Sound Effects</a> -->
+  <script src="scripts/app.js" charset="utf-8"></script>
+  </body>
 </html>
